# MinsC2Rust_Tool

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  clean.py  config  decompose.sh  install_requrement.sh  key  requirements.txt  run.sh  run_eval.sh  run_post_process.sh  sources.list
Tool_py/: AST_test.py  assert.rs  clang_callgraph.py  ctags_parse.py  extract_rust_func.py  logger.py  makejson.py  merge_c_h.py  metrics.py  parse_config.py  post_process.py  prompts.py  run_tests.py  temp.long-type-5651545525761472141.txt  test_unsafe.py  utils.py
Tool_py/configs/: config copy.ini  config.ini  config_claude.ini  config_cloud.ini  config_comparison.ini  config_crown.ini  config_deepseek.ini  config_deepseek1.ini  config_deepseek1_history.ini  config_deepseek2.ini  config_deepseek3.ini  config_gpt.ini  config_qwen.ini  config_test.ini
Tool_py/models/: claude.py  deepseek.py  gpt.py  llm_model.py  local.py  qianwen.py  zhipu.py
Tool_py/src/: data_manager.py  decompose.py  main.py  sse_invoke_method.py
fake_libc_include/: _fake_defines.h  _fake_typedefs.h  assert.h  curses.h  glob.h  ncurses.h  regex.h
func_result/: data.json  function.json  new_processed.json  new_src.json  new_src_processed.json  new_test.json  new_test_processed.json  output_process_re.py  output_test.json  processed_output.json  processed_test_output.json  rust_ast.json
rust_ast_project/: Cargo.toml
rust_ast_project/src/: main.rs
scripts/: cbuild.sh  docker_build.sh  docker_run.sh
streamlit/: 介绍.py
streamlit/ErrorInfo/: all_error_funcs_content.json  (+2 more)
test_project/: Cargo.toml
(+69 files in other folders)
